Bug 59111 - Apache Bench does not parse lowercase field names
Summary: Apache Bench does not parse lowercase field names
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: Core (show other bugs)
Version: 2.0-HEAD
Hardware: PC Mac OS X 10.1
: P2 normal (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords: FixedInTrunk
Depends on:
Blocks:
 
Reported: 2016-03-03 19:54 UTC by jon.valliere
Modified: 2016-11-14 12:12 UTC (History)
0 users



Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jon.valliere 2016-03-03 19:54:20 UTC
Field names such as "content-length" are not processed by ab unless they are "Content-Length"

Every other benchmarking tool correctly implements this.
Comment 1 jon.valliere 2016-03-03 19:57:51 UTC
Works correctly in: curl, wget, wrk, fiddler, etc; ab is the only tool which does not properly parse the header fields.
Comment 2 Yann Ylavic 2016-03-04 00:12:59 UTC
Thanks for the report, fixed in r1733537:
Comment 3 Yann Ylavic 2016-03-04 00:14:12 UTC
r1733537
Comment 4 Yann Ylavic 2016-11-14 12:12:26 UTC
Backported in 2.4.21.