ab: Use caseless matching for HTTP tokens (e.g. content-length). PR 59111.

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1733537 13f79535-47bb-0310-9956-ffa450edef68